--- a/quizWeb/src/index.html
+++ b/quizWeb/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>QuizWeb</title>
-  <base href="/">
+  <base href="/QuizApp/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/25/25333.png">
 </head>
